--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_tag posts_path do %>
   <label>Post title:</label><br>
-  <input type="text" id="post_title" name="post[title]"><br>
+  <%= text_field_tag :'post[title]' %>
  
   <label>Post description:</label><br>
-  <textarea id="post_description" name="post[description]"></textarea><br>
+  <%= text_area_tag :'post[description]' %>
   
   <input type="submit" value="Submit Post">
 <% end %>
